--- a/products.html
+++ b/products.html
@@ -10,12 +10,14 @@
   <meta name="keywords"
     content="SOLVY products, floor cleaner, kitchen cleaner, glass cleaner, toilet cleaner, liquid hand wash, garbage bags, tissue paper">
   <meta property="og:title" content="SOLVY Cleaning Chemical Product Range">
-  <meta property="og:description" content="Professional cleaning solutions for hotels, hospitals, offices, distributors and homes.">
+  <meta property="og:description"
+    content="Professional cleaning solutions for hotels, hospitals, offices, distributors and homes.">
   <meta property="og:type" content="website">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -33,7 +35,7 @@
             Focused cleaning chemistry for professional housekeeping and facility management.
           </p>
         </div>
-        <a href="contact.html" class="btn btn-accent">Request recommendation</a>
+        <!-- <a href="contact.html" class="btn btn-accent">Request recommendation</a> -->
       </div>
 
       <div class="row g-4" id="products-grid"></div>
