--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About SOLVY</title>
-    <meta name="description" content="About SOLVY - trusted cleaning solutions for commercial and household use. Floor cleaners, kitchen degreasers, glass cleaners, and more across India.">
+    <meta name="description"
+        content="About SOLVY - trusted cleaning solutions for commercial and household use. Floor cleaners, kitchen degreasers, glass cleaners, and more across India.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -16,33 +17,44 @@
 <body data-page="about">
     <div id="header"></div>
 
-    <main class="section-padding">
+    <main class="section-padding about-page">
         <div class="container">
             <h1 class="mb-3">About SOLVY</h1>
-            <p class="text-muted lead">SOLVY is a trusted cleaning solutions brand offering high-performance products for both commercial and household cleaning needs.</p>
-            <p class="text-muted">We manufacture and supply a wide range of cleaning chemicals designed for hotels, hospitals, offices, as well as everyday home cleaning applications.</p>
-            <p class="text-muted">Our product portfolio includes floor cleaners, kitchen degreasers, glass cleaners, bathroom cleaners, tap cleaners, and hand hygiene solutions—formulated to support effective cleaning, freshness, and routine maintenance.</p>
-            <p class="text-muted">At SOLVY, we focus on consistent quality, safe usage, and reliable packaging options for bulk buyers, distributors, and retail customers across India.</p>
+            <p class="text-muted lead">SOLVY is a trusted cleaning solutions brand offering high-performance products
+                for both commercial and household cleaning needs.</p>
+            <p class="text-muted">We manufacture and supply a wide range of cleaning chemicals designed for hotels,
+                hospitals, offices, as well as everyday home cleaning applications.</p>
+            <p class="text-muted">Our product portfolio includes floor cleaners, kitchen degreasers, glass cleaners,
+                bathroom cleaners, tap cleaners, and hand hygiene solutions—formulated to support effective cleaning,
+                freshness, and routine maintenance.</p>
+            <p class="text-muted">At SOLVY, we focus on consistent quality, safe usage, and reliable packaging options
+                for bulk buyers, distributors, and retail customers across India.</p>
 
             <h4 class="mt-5">Our Mission</h4>
-            <p class="text-muted">To deliver effective and reliable cleaning solutions that help maintain clean, hygienic, and well-managed spaces—both professionally and at home.</p>
+            <p class="text-muted">To deliver effective and reliable cleaning solutions that help maintain clean,
+                hygienic, and well-managed spaces—both professionally and at home.</p>
 
             <h4 class="mt-4">Our Vision</h4>
-            <p class="text-muted">To become a leading cleaning brand recognized for quality, performance, and strong availability in commercial as well as retail markets.</p>
+            <p class="text-muted">To become a leading cleaning brand recognized for quality, performance, and strong
+                availability in commercial as well as retail markets.</p>
 
             <h4 class="mt-4">Why Choose SOLVY?</h4>
             <ul class="about-list text-muted mb-4">
-                <li><i class="bi bi-check2-circle text-accent"></i> Suitable for hotels, hospitals &amp; institutions</li>
+                <li><i class="bi bi-check2-circle text-accent"></i> Suitable for hotels, hospitals &amp; institutions
+                </li>
                 <li><i class="bi bi-check2-circle text-accent"></i> Ideal for everyday home cleaning</li>
                 <li><i class="bi bi-check2-circle text-accent"></i> High-performance and cost-effective solutions</li>
                 <li><i class="bi bi-check2-circle text-accent"></i> Available in bulk and retail packaging</li>
-                <li><i class="bi bi-check2-circle text-accent"></i> Distributor &amp; dealer opportunities available</li>
+                <li><i class="bi bi-check2-circle text-accent"></i> Distributor &amp; dealer opportunities available
+                </li>
             </ul>
 
             <div class="about-card p-4 rounded">
                 <h4 class="about-card-title mb-3">Partner With Us</h4>
-                <p class="text-muted mb-3">We welcome distributors, wholesalers, and retail partners to grow with SOLVY as we expand our network across India.</p>
-                <a href="contact.html" class="btn btn-accent">Contact us for product inquiries or distribution opportunities</a>
+                <p class="text-muted mb-3">We welcome distributors, wholesalers, and retail partners to grow with SOLVY
+                    as we expand our network across India.</p>
+                <a href="contact.html" class="btn btn-accent">Contact us for product inquiries or distribution
+                    opportunities</a>
             </div>
         </div>
     </main>
