--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
 
 <body data-page="home">
@@ -30,31 +32,34 @@
     <!-- Hero -->
     <section class="hero-home">
         <div id="home-owl" class="owl-carousel owl-theme" aria-label="Homepage slider">
-            <div class="item"><img src="assets/images/slider4.jpeg" alt="SOLVY cleaning solutions"></div>
-            <div class="item"><img src="assets/images/slider5.jpeg" alt="Professional cleaning chemicals"></div>
+            <div class="item"><img src="assets/images/slider-1.png" alt="SOLVY cleaning solutions"></div>
+            <div class="item"><img src="assets/images/slider-2.png" alt="Professional cleaning chemicals"></div>
         </div>
         <div class="hero-overlay">
             <div class="container hero-overlay-inner">
                 <p class="hero-label">Professional Cleaning Chemicals</p>
                 <h1 class="hero-title">Clean. Safe. Reliable.</h1>
-                <p class="hero-sub">High-performance formulations for hotels, healthcare, offices and homes across India.</p>
+                <p class="hero-sub">High-performance formulations for hotels, healthcare, offices and homes across
+                    India.</p>
                 <a href="products.html" class="btn btn-hero">View products</a>
             </div>
         </div>
     </section>
 
     <!-- About -->
-    <section class="section-padding" id="about">
+    <section class="section-padding about-page" id="about">
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6">
                     <span class="section-label">About us</span>
                     <h2 class="section-title mb-3">About SOLVY</h2>
                     <p class="lead text-body-secondary mb-3">
-                        A specialised cleaning chemical brand focused on consistent, professional-grade hygiene for critical environments.
+                        A specialised cleaning chemical brand focused on consistent, professional-grade hygiene for
+                        critical environments.
                     </p>
                     <p class="text-body-secondary mb-4">
-                        From guest rooms and operation theatres to corporate workspaces and residential towers, our formulations are designed for high efficacy, surface safety and operational efficiency.
+                        From guest rooms and operation theatres to corporate workspaces and residential towers, our
+                        formulations are designed for high efficacy, surface safety and operational efficiency.
                     </p>
                     <div class="row g-3">
                         <div class="col-sm-6">
@@ -75,9 +80,12 @@
                     <div class="about-card">
                         <h6 class="about-card-title">Why SOLVY</h6>
                         <ul class="about-list">
-                            <li><i class="bi bi-check2-circle text-accent"></i> Consistent product quality for large-scale housekeeping operations.</li>
-                            <li><i class="bi bi-check2-circle text-accent"></i> Range for floors, kitchens, glass, washrooms and general hygiene.</li>
-                            <li><i class="bi bi-check2-circle text-accent"></i> Pack sizes for hotels, hospitals, offices, distributors and home users.</li>
+                            <li><i class="bi bi-check2-circle text-accent"></i> Consistent product quality for
+                                large-scale housekeeping operations.</li>
+                            <li><i class="bi bi-check2-circle text-accent"></i> Range for floors, kitchens, glass,
+                                washrooms and general hygiene.</li>
+                            <li><i class="bi bi-check2-circle text-accent"></i> Pack sizes for hotels, hospitals,
+                                offices, distributors and home users.</li>
                         </ul>
                         <a href="about.html" class="btn btn-outline-accent btn-sm">Learn more</a>
                     </div>
@@ -118,14 +126,16 @@
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-building"></i></span>
                         <h5 class="industry-title">Hotels &amp; Hospitality</h5>
-                        <p class="industry-desc mb-0">Guest rooms, lobbies, kitchens and back-of-house with brand-grade hygiene.</p>
+                        <p class="industry-desc mb-0">Guest rooms, lobbies, kitchens and back-of-house with brand-grade
+                            hygiene.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-heart-pulse"></i></span>
                         <h5 class="industry-title">Hospitals &amp; Healthcare</h5>
-                        <p class="industry-desc mb-0">Critical area floor and surface cleaning for high hygiene standards.</p>
+                        <p class="industry-desc mb-0">Critical area floor and surface cleaning for high hygiene
+                            standards.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -153,7 +163,8 @@
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-truck"></i></span>
                         <h5 class="industry-title">Distributors &amp; Resellers</h5>
-                        <p class="industry-desc mb-0">Structured portfolio for chemical distributors and channel partners.</p>
+                        <p class="industry-desc mb-0">Structured portfolio for chemical distributors and channel
+                            partners.</p>
                     </div>
                 </div>
             </div>
@@ -163,7 +174,8 @@
         </div>
     </section>
 
-    <!-- Distributor CTA -->
+    <!-- Distributor CTA (commented out) -->
+    <!--
     <section class="cta-section" id="distributors">
         <div class="container">
             <div class="cta-inner">
@@ -174,7 +186,8 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-light btn-lg">Enquire for distribution</a>
-                    <a href="https://wa.me/919111912346?text=I%27m%20interested%20in%20SOLVY%20distribution%20opportunity." target="_blank" rel="noopener" class="btn btn-outline-light btn-lg">
+                    <a href="https://wa.me/919111912346?text=I%27m%20interested%20in%20SOLVY%20distribution%20opportunity."
+                        target="_blank" rel="noopener" class="btn btn-outline-light btn-lg">
                         <i class="bi bi-whatsapp me-2"></i>WhatsApp
                     </a>
                 </div>
@@ -182,6 +195,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Contact -->
     <section class="section-padding bg-alt" id="contact">
@@ -194,19 +208,22 @@
                     </p>
                     <ul class="contact-list">
                         <li><a href="tel:+919111912346"><i class="bi bi-telephone me-2"></i>+91 9111912346</a></li>
-                        <li><a href="mailto:contact.solvycare@gmail.com"><i class="bi bi-envelope me-2"></i>contact.solvycare@gmail.com</a></li>
+                        <li><a href="mailto:contact.solvycare@gmail.com"><i
+                                    class="bi bi-envelope me-2"></i>contact.solvycare@gmail.com</a></li>
                         <li><i class="bi bi-geo-alt me-2"></i>Indore, India</li>
                     </ul>
                     <div class="d-flex flex-wrap gap-2">
-                        <a href="https://wa.me/919111912346" target="_blank" rel="noopener" class="btn btn-success"><i class="bi bi-whatsapp me-1"></i>WhatsApp</a>
-                        <a href="tel:+919111912346" class="btn btn-outline-accent">Call</a>
-                        <a href="contact.html" class="btn btn-outline-secondary">Contact form</a>
+                        <!-- <a href="https://wa.me/919111912346" target="_blank" rel="noopener" class="btn btn-success"><i
+                                class="bi bi-whatsapp me-1"></i>WhatsApp</a> -->
+                        <!-- <a href="tel:+919111912346" class="btn btn-outline-accent">Call</a> -->
+                        <!-- <a href="contact.html" class="btn btn-outline-secondary">Contact form</a> -->
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-card">
                         <h5 class="contact-card-title">Sales &amp; distribution</h5>
-                        <p class="text-body-secondary small mb-3">Bulk orders and distribution: pricing, logistics and packaging.</p>
+                        <p class="text-body-secondary small mb-3">Bulk orders and distribution: pricing, logistics and
+                            packaging.</p>
                         <a href="distributors.html" class="btn btn-accent me-2">Distributor info</a>
                         <a href="products.html" class="btn btn-outline-accent">Products</a>
                     </div>
@@ -217,7 +234,8 @@
 
     <div id="footer"></div>
 
-    <a href="https://wa.me/919111912346?text=Hi%20SOLVY%2C%20I%27d%20like%20to%20enquire%20about%20your%20cleaning%20solutions." class="whatsapp-float" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+    <a href="https://wa.me/919111912346?text=Hi%20SOLVY%2C%20I%27d%20like%20to%20enquire%20about%20your%20cleaning%20solutions."
+        class="whatsapp-float" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
         <i class="bi bi-whatsapp"></i>
     </a>
 
