--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Privacy Policy | SOLVY</title>
-    <meta name="description" content="SOLVY Privacy Policy - how Horizon Care collects, uses, and protects your Personal Data. DPDP Act 2023, IT Act compliant.">
+    <meta name="description"
+        content="SOLVY Privacy Policy - how Horizon Care collects, uses, and protects your Personal Data. DPDP Act 2023, IT Act compliant.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -16,15 +17,22 @@
 <body data-page="legal">
     <div id="header"></div>
 
-    <main class="section-padding">
+    <main class="section-padding privacy-page">
         <div class="container" style="max-width: 800px;">
             <h1 class="mb-3">Privacy Policy</h1>
-            <p class="text-muted">This Privacy Policy describes how Solvy, a brand owned and operated by Horizon Care (“Company,” “we,” “our,” or “us”), collects, uses, processes, stores, and protects your Personal Data when you visit our website, purchase our products, or interact with us through digital or offline channels.</p>
-            <p class="text-muted">This Privacy Policy is designed in accordance with applicable data protection laws, including the Information Technology Act, 2000 and applicable Rules thereunder, and the Digital Personal Data Protection Act, 2023 (India), where applicable.</p>
-            <p class="text-muted">By accessing or using our website or services, you agree to the terms of this Privacy Policy.</p>
+            <p class="text-muted">This Privacy Policy describes how Solvy, a brand owned and operated by Horizon Care
+                (“Company,” “we,” “our,” or “us”), collects, uses, processes, stores, and protects your Personal Data
+                when you visit our website, purchase our products, or interact with us through digital or offline
+                channels.</p>
+            <p class="text-muted">This Privacy Policy is designed in accordance with applicable data protection laws,
+                including the Information Technology Act, 2000 and applicable Rules thereunder, and the Digital Personal
+                Data Protection Act, 2023 (India), where applicable.</p>
+            <p class="text-muted">By accessing or using our website or services, you agree to the terms of this Privacy
+                Policy.</p>
 
             <h2 class="h4 mt-5">Purpose</h2>
-            <p class="text-muted">Horizon Care is committed to maintaining the privacy, confidentiality, and security of your Personal Data.</p>
+            <p class="text-muted">Horizon Care is committed to maintaining the privacy, confidentiality, and security of
+                your Personal Data.</p>
             <p class="text-muted">This Privacy Policy explains:</p>
             <ul class="text-muted">
                 <li>What Personal Data we collect</li>
@@ -33,16 +41,22 @@
                 <li>Your legal rights and choices</li>
                 <li>How we protect your information</li>
             </ul>
-            <p class="text-muted">This Policy applies to all users, customers, distributors, business partners, and visitors interacting with Solvy products and services.</p>
+            <p class="text-muted">This Policy applies to all users, customers, distributors, business partners, and
+                visitors interacting with Solvy products and services.</p>
 
             <h2 class="h4 mt-5">1. Consent</h2>
-            <p class="text-muted">By accessing our website, placing orders, submitting inquiries, or otherwise providing your Personal Data, you:</p>
+            <p class="text-muted">By accessing our website, placing orders, submitting inquiries, or otherwise providing
+                your Personal Data, you:</p>
             <ul class="text-muted">
-                <li>Provide free, specific, informed, and unconditional consent to the collection and processing of your Personal Data for lawful purposes.</li>
+                <li>Provide free, specific, informed, and unconditional consent to the collection and processing of your
+                    Personal Data for lawful purposes.</li>
                 <li>Acknowledge that you have read and understood this Privacy Policy.</li>
             </ul>
-            <p class="text-muted">If you do not agree with this Privacy Policy, please refrain from using our services.</p>
-            <p class="text-muted">You may withdraw your consent at any time by contacting us at <a href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>, subject to legal or contractual restrictions.</p>
+            <p class="text-muted">If you do not agree with this Privacy Policy, please refrain from using our services.
+            </p>
+            <p class="text-muted">You may withdraw your consent at any time by contacting us at <a
+                    href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>, subject to legal or contractual
+                restrictions.</p>
 
             <h2 class="h4 mt-5">2. Collection of Your Personal Data and Other Information</h2>
             <p class="text-muted">We may collect the following categories of Personal Data:</p>
@@ -78,11 +92,14 @@
             </ul>
 
             <h3 class="h6 mt-3 fw-semibold">D. Social Media Interactions</h3>
-            <p class="text-muted">If you interact with Solvy through platforms such as Facebook, Instagram, or LinkedIn, we may receive publicly available profile information subject to those platforms’ respective privacy policies.</p>
+            <p class="text-muted">If you interact with Solvy through platforms such as Facebook, Instagram, or LinkedIn,
+                we may receive publicly available profile information subject to those platforms’ respective privacy
+                policies.</p>
             <p class="text-muted">We do not knowingly collect Personal Data from individuals under the age of 18.</p>
 
             <h2 class="h4 mt-5">3. Use of Personal Data</h2>
-            <p class="text-muted">We process Personal Data strictly for lawful and legitimate business purposes, including:</p>
+            <p class="text-muted">We process Personal Data strictly for lawful and legitimate business purposes,
+                including:</p>
             <ul class="text-muted">
                 <li>Processing and fulfilling orders</li>
                 <li>Managing customer accounts</li>
@@ -94,27 +111,38 @@
                 <li>Preventing fraud and ensuring platform security</li>
                 <li>Complying with applicable legal obligations</li>
             </ul>
-            <p class="text-muted">We do not sell, rent, or trade your Personal Data to third parties. Marketing communications may be opted out of at any time.</p>
+            <p class="text-muted">We do not sell, rent, or trade your Personal Data to third parties. Marketing
+                communications may be opted out of at any time.</p>
 
             <h2 class="h4 mt-5">4. Disclosure of Your Information</h2>
             <p class="text-muted">We may disclose your Personal Data only under the following circumstances:</p>
 
             <h3 class="h6 mt-3 fw-semibold">A. Service Providers</h3>
-            <p class="text-muted">We may share information with third-party service providers who assist in: payment processing, logistics and delivery, website hosting, IT support, and accounting and compliance services. Such providers are contractually bound to maintain confidentiality and data security.</p>
+            <p class="text-muted">We may share information with third-party service providers who assist in: payment
+                processing, logistics and delivery, website hosting, IT support, and accounting and compliance services.
+                Such providers are contractually bound to maintain confidentiality and data security.</p>
 
             <h3 class="h6 mt-3 fw-semibold">B. Legal Compliance</h3>
-            <p class="text-muted">We may disclose Personal Data to comply with legal obligations, in response to lawful government requests, to protect our rights, property, or safety, or to prevent fraud or illegal activity.</p>
+            <p class="text-muted">We may disclose Personal Data to comply with legal obligations, in response to lawful
+                government requests, to protect our rights, property, or safety, or to prevent fraud or illegal
+                activity.</p>
 
             <h3 class="h6 mt-3 fw-semibold">C. Business Transfers</h3>
-            <p class="text-muted">In the event of merger, acquisition, restructuring, or sale of assets, Personal Data may be transferred to the successor entity, subject to applicable laws.</p>
+            <p class="text-muted">In the event of merger, acquisition, restructuring, or sale of assets, Personal Data
+                may be transferred to the successor entity, subject to applicable laws.</p>
 
             <h2 class="h4 mt-5">8. Cookies and Automatic Information Gathering Technologies</h2>
-            <p class="text-muted">We use cookies and similar technologies to: enhance website performance, analyze visitor traffic, improve user experience, and store user preferences.</p>
-            <p class="text-muted">Cookies may collect technical information such as: IP address, device information, pages visited, and time spent on website.</p>
-            <p class="text-muted">You may disable cookies through your browser settings. However, certain website functionalities may be affected. We may use analytics tools such as Google. These third parties operate under their own privacy policies.</p>
+            <p class="text-muted">We use cookies and similar technologies to: enhance website performance, analyze
+                visitor traffic, improve user experience, and store user preferences.</p>
+            <p class="text-muted">Cookies may collect technical information such as: IP address, device information,
+                pages visited, and time spent on website.</p>
+            <p class="text-muted">You may disable cookies through your browser settings. However, certain website
+                functionalities may be affected. We may use analytics tools such as Google. These third parties operate
+                under their own privacy policies.</p>
 
             <h2 class="h4 mt-5">10. Information Security and Data Integrity</h2>
-            <p class="text-muted">We implement appropriate technical and organizational safeguards to protect Personal Data, including:</p>
+            <p class="text-muted">We implement appropriate technical and organizational safeguards to protect Personal
+                Data, including:</p>
             <ul class="text-muted">
                 <li>SSL encryption</li>
                 <li>Secure hosting environments</li>
@@ -122,27 +150,45 @@
                 <li>Firewall protection</li>
                 <li>Regular security reviews</li>
             </ul>
-            <p class="text-muted">While we strive to protect your Personal Data, no system can guarantee absolute security. Access to Personal Data is restricted to authorized personnel on a need-to-know basis.</p>
+            <p class="text-muted">While we strive to protect your Personal Data, no system can guarantee absolute
+                security. Access to Personal Data is restricted to authorized personnel on a need-to-know basis.</p>
 
             <h2 class="h4 mt-5">11. Links to Other Websites</h2>
-            <p class="text-muted">Our website may contain links to third-party websites. Horizon Care is not responsible for the privacy practices or content of such third-party websites. Users are encouraged to review the privacy policies of external sites before providing any information.</p>
+            <p class="text-muted">Our website may contain links to third-party websites. Horizon Care is not responsible
+                for the privacy practices or content of such third-party websites. Users are encouraged to review the
+                privacy policies of external sites before providing any information.</p>
 
             <h2 class="h4 mt-5">12. Data Retention</h2>
-            <p class="text-muted">We retain Personal Data only for as long as: necessary to fulfill the purpose for which it was collected; required under applicable tax, legal, and regulatory obligations; or needed for dispute resolution or enforcement of agreements. Upon expiry of the retention period, Personal Data will be securely deleted or anonymized.</p>
+            <p class="text-muted">We retain Personal Data only for as long as: necessary to fulfill the purpose for
+                which it was collected; required under applicable tax, legal, and regulatory obligations; or needed for
+                dispute resolution or enforcement of agreements. Upon expiry of the retention period, Personal Data will
+                be securely deleted or anonymized.</p>
 
             <h2 class="h4 mt-5">13. Data Access and Correction; Transparency and Choice; Do Not Track Signals</h2>
-            <p class="text-muted">Subject to applicable law, you have the right to: request access to your Personal Data; request correction of inaccurate data; request deletion of your Personal Data; withdraw consent; and opt out of marketing communications.</p>
-            <p class="text-muted">To exercise these rights, please contact us at <a href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>. We may require identity verification before processing such requests.</p>
-            <p class="text-muted"><strong>Do Not Track:</strong> Our website currently does not respond to browser “Do Not Track” signals.</p>
+            <p class="text-muted">Subject to applicable law, you have the right to: request access to your Personal
+                Data; request correction of inaccurate data; request deletion of your Personal Data; withdraw consent;
+                and opt out of marketing communications.</p>
+            <p class="text-muted">To exercise these rights, please contact us at <a
+                    href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>. We may require identity
+                verification before processing such requests.</p>
+            <p class="text-muted"><strong>Do Not Track:</strong> Our website currently does not respond to browser “Do
+                Not Track” signals.</p>
 
             <h2 class="h4 mt-5">17. Changes to this Privacy Policy</h2>
-            <p class="text-muted">Horizon Care reserves the right to modify or update this Privacy Policy at any time to reflect changes in legal requirements or business practices. Updates will be posted on this page with a revised “Last Updated” date. Continued use of our services after such updates constitutes acceptance of the revised Policy.</p>
+            <p class="text-muted">Horizon Care reserves the right to modify or update this Privacy Policy at any time to
+                reflect changes in legal requirements or business practices. Updates will be posted on this page with a
+                revised “Last Updated” date. Continued use of our services after such updates constitutes acceptance of
+                the revised Policy.</p>
 
             <h2 class="h4 mt-5">18. Liability</h2>
-            <p class="text-muted">If Horizon Care transfers Personal Data to authorized third-party service providers and such providers process data inconsistently with this Privacy Policy, Horizon Care shall remain responsible in accordance with applicable law, unless the Company is not responsible for the event giving rise to the damage.</p>
+            <p class="text-muted">If Horizon Care transfers Personal Data to authorized third-party service providers
+                and such providers process data inconsistently with this Privacy Policy, Horizon Care shall remain
+                responsible in accordance with applicable law, unless the Company is not responsible for the event
+                giving rise to the damage.</p>
 
             <h2 class="h4 mt-5">19. Contact Us</h2>
-            <p class="text-muted">If you have any questions, concerns, or requests regarding this Privacy Policy or your Personal Data, please contact:</p>
+            <p class="text-muted">If you have any questions, concerns, or requests regarding this Privacy Policy or your
+                Personal Data, please contact:</p>
             <p class="text-muted mb-1"><strong>Horizon Care</strong><br>(Owner of Solvy Brand)</p>
             <p class="text-muted mb-0">Email: <a href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a></p>
         </div>
