--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Terms &amp; Conditions | SOLVY</title>
-    <meta name="description" content="Terms and Conditions for Solvy website, products and services. Horizon Care - cleaning and hygiene products.">
+    <meta name="description"
+        content="Terms and Conditions for Solvy website, products and services. Horizon Care - cleaning and hygiene products.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
@@ -16,11 +17,14 @@
 <body data-page="legal">
     <div id="header"></div>
 
-    <main class="section-padding">
+    <main class="section-padding terms-page">
         <div class="container" style="max-width: 800px;">
             <h1 class="mb-3">Terms &amp; Conditions</h1>
-            <p class="text-muted">These Terms &amp; Conditions (“Terms”) govern your access to and use of the website, products, and services offered under the brand Solvy, owned and operated by Horizon Care (“Company,” “we,” “our,” or “us”).</p>
-            <p class="text-muted">By accessing our website, purchasing our products, or using our services, you agree to be bound by these Terms. If you do not agree, you must discontinue use immediately.</p>
+            <p class="text-muted">These Terms &amp; Conditions (“Terms”) govern your access to and use of the website,
+                products, and services offered under the brand Solvy, owned and operated by Horizon Care (“Company,”
+                “we,” “our,” or “us”).</p>
+            <p class="text-muted">By accessing our website, purchasing our products, or using our services, you agree to
+                be bound by these Terms. If you do not agree, you must discontinue use immediately.</p>
 
             <h2 class="h4 mt-5">1. Acceptance of Terms</h2>
             <p class="text-muted">By using the Solvy website or purchasing any Solvy product, you confirm that:</p>
@@ -33,7 +37,8 @@
             <h2 class="h4 mt-5">2. About Us</h2>
             <p class="text-muted mb-1"><strong>Brand Name:</strong> Solvy</p>
             <p class="text-muted mb-1"><strong>Owned &amp; Operated By:</strong> Horizon Care</p>
-            <p class="text-muted mb-1"><strong>Business Nature:</strong> Manufacturing, marketing, and distribution of cleaning and hygiene products.</p>
+            <p class="text-muted mb-1"><strong>Business Nature:</strong> Manufacturing, marketing, and distribution of
+                cleaning and hygiene products.</p>
             <p class="text-muted">For official communication, please refer to the Contact section below.</p>
 
             <h2 class="h4 mt-5">3. Products and Services</h2>
@@ -45,7 +50,8 @@
                 <li>Disinfectants</li>
                 <li>Institutional and commercial cleaning products</li>
             </ul>
-            <p class="text-muted">All products are subject to availability. We reserve the right to modify, discontinue, or update products without prior notice.</p>
+            <p class="text-muted">All products are subject to availability. We reserve the right to modify, discontinue,
+                or update products without prior notice.</p>
 
             <h2 class="h4 mt-5">4. Pricing and Payment</h2>
             <ul class="text-muted">
@@ -66,7 +72,8 @@
                 <li>Suspected fraudulent transactions</li>
                 <li>Regulatory compliance issues</li>
             </ul>
-            <p class="text-muted">In case of cancellation after payment, a refund will be processed as per our Refund Policy.</p>
+            <p class="text-muted">In case of cancellation after payment, a refund will be processed as per our Refund
+                Policy.</p>
 
             <h2 class="h4 mt-5">6. Shipping and Delivery</h2>
             <ul class="text-muted">
@@ -96,7 +103,8 @@
                 <li>Text</li>
                 <li>Packaging designs</li>
             </ul>
-            <p class="text-muted">are the intellectual property of Horizon Care and are protected under applicable intellectual property laws. Unauthorized use, reproduction, or distribution is strictly prohibited.</p>
+            <p class="text-muted">are the intellectual property of Horizon Care and are protected under applicable
+                intellectual property laws. Unauthorized use, reproduction, or distribution is strictly prohibited.</p>
 
             <h2 class="h4 mt-5">9. User Obligations</h2>
             <p class="text-muted">You agree not to:</p>
@@ -109,7 +117,8 @@
             <p class="text-muted">Violation of these Terms may result in termination of access and legal action.</p>
 
             <h2 class="h4 mt-5">10. Product Use Disclaimer</h2>
-            <p class="text-muted">Solvy products must be used strictly according to: label instructions, safety guidelines, and intended usage.</p>
+            <p class="text-muted">Solvy products must be used strictly according to: label instructions, safety
+                guidelines, and intended usage.</p>
             <p class="text-muted">We are not liable for damages resulting from:</p>
             <ul class="text-muted">
                 <li>Misuse</li>
@@ -123,31 +132,43 @@
             <p class="text-muted">To the maximum extent permitted by law:</p>
             <ul class="text-muted">
                 <li>Horizon Care shall not be liable for indirect, incidental, special, or consequential damages.</li>
-                <li>Our total liability shall not exceed the purchase value of the product giving rise to the claim.</li>
+                <li>Our total liability shall not exceed the purchase value of the product giving rise to the claim.
+                </li>
                 <li>We do not guarantee uninterrupted or error-free website operation.</li>
             </ul>
 
             <h2 class="h4 mt-5">12. Warranties Disclaimer</h2>
             <p class="text-muted">All products and services are provided on an “as is” and “as available” basis.</p>
-            <p class="text-muted">We disclaim all implied warranties including: merchantability, fitness for a particular purpose, and non-infringement—except as expressly required by applicable consumer protection laws.</p>
+            <p class="text-muted">We disclaim all implied warranties including: merchantability, fitness for a
+                particular purpose, and non-infringement—except as expressly required by applicable consumer protection
+                laws.</p>
 
             <h2 class="h4 mt-5">13. Indemnification</h2>
-            <p class="text-muted">You agree to indemnify and hold Horizon Care harmless from any claims, damages, liabilities, or expenses arising from: violation of these Terms, misuse of products, or violation of applicable laws.</p>
+            <p class="text-muted">You agree to indemnify and hold Horizon Care harmless from any claims, damages,
+                liabilities, or expenses arising from: violation of these Terms, misuse of products, or violation of
+                applicable laws.</p>
 
             <h2 class="h4 mt-5">14. Force Majeure</h2>
-            <p class="text-muted">We shall not be held liable for delays or failure in performance caused by events beyond reasonable control, including but not limited to: natural disasters, government restrictions, supply chain disruptions, strikes, war or pandemics.</p>
+            <p class="text-muted">We shall not be held liable for delays or failure in performance caused by events
+                beyond reasonable control, including but not limited to: natural disasters, government restrictions,
+                supply chain disruptions, strikes, war or pandemics.</p>
 
             <h2 class="h4 mt-5">15. Governing Law and Jurisdiction</h2>
-            <p class="text-muted">These Terms shall be governed by and construed in accordance with the laws of India. Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the competent courts where Horizon Care is registered/operating, India.</p>
+            <p class="text-muted">These Terms shall be governed by and construed in accordance with the laws of India.
+                Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the competent
+                courts where Horizon Care is registered/operating, India.</p>
 
             <h2 class="h4 mt-5">16. Privacy</h2>
-            <p class="text-muted">Your use of our website and services is also governed by our <a href="privacy.html">Privacy Policy</a>.</p>
+            <p class="text-muted">Your use of our website and services is also governed by our <a
+                    href="privacy.html">Privacy Policy</a>.</p>
 
             <h2 class="h4 mt-5">17. Changes to Terms</h2>
-            <p class="text-muted">Horizon Care reserves the right to update or modify these Terms at any time without prior notice. Continued use of the website after updates constitutes acceptance of revised Terms.</p>
+            <p class="text-muted">Horizon Care reserves the right to update or modify these Terms at any time without
+                prior notice. Continued use of the website after updates constitutes acceptance of revised Terms.</p>
 
             <h2 class="h4 mt-5">18. Severability</h2>
-            <p class="text-muted">If any provision of these Terms is found invalid or unenforceable, the remaining provisions shall continue in full force and effect.</p>
+            <p class="text-muted">If any provision of these Terms is found invalid or unenforceable, the remaining
+                provisions shall continue in full force and effect.</p>
 
             <h2 class="h4 mt-5">19. Contact Us</h2>
             <p class="text-muted">For questions, complaints, or legal inquiries, please contact:</p>
