--- a/products.html
+++ b/products.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="products-page-header">
         <div class="products-page-heading">
-          <span class="section-label">Catalogue</span>
+          <!-- <span class="section-label">Catalogue</span> -->
           <h1 class="section-title mb-2">Product range</h1>
           <p class="text-body-secondary mb-0">
             Focused cleaning chemistry for professional housekeeping and facility management.
