--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Get in Touch | SOLVY</title>
-    <meta name="description" content="Contact SOLVY - Indore, India. Call or WhatsApp for product inquiries, bulk orders and distribution. +91 9111912346.">
+    <meta name="description"
+        content="Contact SOLVY - Indore, India. Call or WhatsApp for product inquiries, bulk orders and distribution. +91 9111912346.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -19,9 +21,10 @@
     <section class="industry-hero industry-hero-gradient">
         <div class="industry-hero-overlay">
             <div class="container text-center">
-                <span class="section-label text-white-50">Contact</span>
+                <!-- <span class="section-label text-white-50">Contact</span> -->
                 <h1 class="section-title text-white mb-2">Get in Touch</h1>
-                <p class="text-white-50 mx-auto" style="max-width: 480px;">Questions, product inquiries, bulk orders or distribution—we’re here to help.</p>
+                <p class="text-white-50 mx-auto" style="max-width: 480px;">Questions, product inquiries, bulk orders or
+                    distribution—we’re here to help.</p>
             </div>
         </div>
     </section>
@@ -31,7 +34,8 @@
             <div class="row g-4 align-items-start">
                 <div class="col-lg-6">
                     <p class="lead text-body-secondary mb-4">
-                        Reach out by phone or WhatsApp for the fastest response. We support customers across India with cleaning solutions for hotels, healthcare, offices, and homes.
+                        Reach out by phone or WhatsApp for the fastest response. We support customers across India with
+                        cleaning solutions for hotels, healthcare, offices, and homes.
                     </p>
                     <div class="contact-details-card rounded-3 p-4 mb-4">
                         <h5 class="fw-semibold mb-4">Contact details</h5>
@@ -54,7 +58,8 @@
                                 <span class="contact-icon rounded-2 me-3"><i class="bi bi-envelope"></i></span>
                                 <div>
                                     <span class="text-muted small d-block">Email</span>
-                                    <a href="mailto:contact.solvy@gmail.com" class="text-decoration-none">contact.solvy@gmail.com</a>
+                                    <a href="mailto:contact.solvy@gmail.com"
+                                        class="text-decoration-none">contact.solvy@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
@@ -63,7 +68,8 @@
                         <a href="tel:+919111912346" class="btn btn-accent btn-lg px-4">
                             <i class="bi bi-telephone me-2"></i>Call Now
                         </a>
-                        <a href="https://wa.me/919111912346?text=Hi%20SOLVY%2C%20I%27d%20like%20to%20inquire%20about%20your%20products." target="_blank" rel="noopener" class="btn btn-success btn-lg px-4">
+                        <a href="https://wa.me/919111912346?text=Hi%20SOLVY%2C%20I%27d%20like%20to%20inquire%20about%20your%20products."
+                            target="_blank" rel="noopener" class="btn btn-success btn-lg px-4">
                             <i class="bi bi-whatsapp me-2"></i>WhatsApp Inquiry
                         </a>
                     </div>
@@ -71,16 +77,22 @@
                 <div class="col-lg-6">
                     <div class="contact-info-cards">
                         <div class="contact-card rounded-3 p-4 mb-3">
-                            <h6 class="contact-card-title mb-2"><i class="bi bi-box-seam text-accent me-2"></i>Product inquiries</h6>
-                            <p class="text-body-secondary small mb-0">Floor cleaners, kitchen cleaners, glass cleaners, disinfectants, hand wash, and more. Ask for technical specs or bulk pricing.</p>
+                            <h6 class="contact-card-title mb-2"><i class="bi bi-box-seam text-accent me-2"></i>Product
+                                inquiries</h6>
+                            <p class="text-body-secondary small mb-0">Floor cleaners, kitchen cleaners, glass cleaners,
+                                disinfectants, hand wash, and more. Ask for technical specs or bulk pricing.</p>
                         </div>
                         <div class="contact-card rounded-3 p-4 mb-3">
-                            <h6 class="contact-card-title mb-2"><i class="bi bi-truck text-accent me-2"></i>Bulk orders & distribution</h6>
-                            <p class="text-body-secondary small mb-0">Hotels, hospitals, offices, and distributors—we supply in multiple pack sizes. Enquire for MOQ, delivery and dealer terms.</p>
+                            <h6 class="contact-card-title mb-2"><i class="bi bi-truck text-accent me-2"></i>Bulk orders
+                                & distribution</h6>
+                            <p class="text-body-secondary small mb-0">Hotels, hospitals, offices, and distributors—we
+                                supply in multiple pack sizes. Enquire for MOQ, delivery and dealer terms.</p>
                         </div>
                         <div class="contact-card rounded-3 p-4">
-                            <h6 class="contact-card-title mb-2"><i class="bi bi-clock text-accent me-2"></i>Response time</h6>
-                            <p class="text-body-secondary small mb-0">We aim to respond to calls and WhatsApp messages within the same working day.</p>
+                            <h6 class="contact-card-title mb-2"><i class="bi bi-clock text-accent me-2"></i>Response
+                                time</h6>
+                            <p class="text-body-secondary small mb-0">We aim to respond to calls and WhatsApp messages
+                                within the same working day.</p>
                         </div>
                     </div>
                 </div>
