--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 </head>
 
 <body data-page="home">
@@ -31,11 +28,18 @@
 
     <!-- Hero -->
     <section class="hero-home">
-        <div id="home-owl" class="owl-carousel owl-theme" aria-label="Homepage slider">
-            <div class="item"><img src="assets/images/slider-1.png" alt="SOLVY cleaning solutions"></div>
-            <div class="item"><img src="assets/images/slider-2.png" alt="Professional cleaning chemicals"></div>
+        <div id="homeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel"
+            aria-label="Homepage slider">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/slider-1.png" class="d-block w-100" alt="SOLVY cleaning solutions">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/slider-2.png" class="d-block w-100" alt="Professional cleaning chemicals">
+                </div>
+            </div>
         </div>
-        <div class="hero-overlay">
+        <!-- <div class="hero-overlay">
             <div class="container hero-overlay-inner">
                 <p class="hero-label">Professional Cleaning Chemicals</p>
                 <h1 class="hero-title">Clean. Safe. Reliable.</h1>
@@ -43,7 +47,7 @@
                     India.</p>
                 <a href="products.html" class="btn btn-hero">View products</a>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- About -->
@@ -51,7 +55,7 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6">
-                    <span class="section-label">About us</span>
+                    <!-- <span class="section-label">About us</span> -->
                     <h2 class="section-title mb-3">About SOLVY</h2>
                     <p class="lead text-body-secondary mb-3">
                         A specialised cleaning chemical brand focused on consistent, professional-grade hygiene for
@@ -98,7 +102,7 @@
     <section class="section-padding bg-alt" id="products">
         <div class="container">
             <div class="section-heading text-center mb-5">
-                <span class="section-label">Portfolio</span>
+                <!-- <span class="section-label">Portfolio</span> -->
                 <h2 class="section-title mb-2">Featured Cleaning Solutions</h2>
                 <p class="text-body-secondary mx-auto" style="max-width: 540px;">
                     A focused portfolio for professional housekeeping, facility management and modern homes.
@@ -115,7 +119,7 @@
     <section class="section-padding" id="industries">
         <div class="container">
             <div class="section-heading text-center mb-5">
-                <span class="section-label">Sectors</span>
+                <!-- <span class="section-label">Sectors</span> -->
                 <h2 class="section-title mb-2">Industries We Serve</h2>
                 <p class="text-body-secondary mx-auto" style="max-width: 540px;">
                     Purpose-built cleaning chemistry for diverse operational environments.
@@ -240,8 +244,6 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
