--- a/industries.html
+++ b/industries.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Industries We Serve | SOLVY</title>
-    <meta name="description" content="SOLVY cleaning solutions for hotels, healthcare, corporate, education, residential and distributors. Purpose-built chemistry for diverse environments.">
+    <meta name="description"
+        content="SOLVY cleaning solutions for hotels, healthcare, corporate, education, residential and distributors. Purpose-built chemistry for diverse environments.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -19,9 +21,10 @@
     <section class="industry-hero industry-hero-gradient">
         <div class="industry-hero-overlay">
             <div class="container">
-                <span class="section-label text-white-50">Sectors</span>
+                <!-- <span class="section-label text-white-50">Sectors</span> -->
                 <h1 class="section-title text-white mb-2">Industries We Serve</h1>
-                <p class="text-white-50 mx-auto" style="max-width: 540px;">Purpose-built cleaning chemistry for diverse operational environments.</p>
+                <p class="text-white-50 mx-auto" style="max-width: 540px;">Purpose-built cleaning chemistry for diverse
+                    operational environments.</p>
             </div>
         </div>
     </section>
@@ -33,14 +36,16 @@
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-building"></i></span>
                         <h5 class="industry-title">Hotels &amp; Hospitality</h5>
-                        <p class="industry-desc mb-0">Guest rooms, lobbies, kitchens and back-of-house with brand-grade hygiene.</p>
+                        <p class="industry-desc mb-0">Guest rooms, lobbies, kitchens and back-of-house with brand-grade
+                            hygiene.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-heart-pulse"></i></span>
                         <h5 class="industry-title">Hospitals &amp; Healthcare</h5>
-                        <p class="industry-desc mb-0">Critical area floor and surface cleaning for high hygiene standards.</p>
+                        <p class="industry-desc mb-0">Critical area floor and surface cleaning for high hygiene
+                            standards.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -68,7 +73,8 @@
                     <div class="industry-card">
                         <span class="industry-icon"><i class="bi bi-truck"></i></span>
                         <h5 class="industry-title">Distributors &amp; Resellers</h5>
-                        <p class="industry-desc mb-0">Structured portfolio for chemical distributors and channel partners.</p>
+                        <p class="industry-desc mb-0">Structured portfolio for chemical distributors and channel
+                            partners.</p>
                     </div>
                 </div>
             </div>
