--- a/industries.html
+++ b/industries.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Industries We Serve | SOLVY</title>
+    <title>Industries We Serve | SOLVY Cleaning Chemicals</title>
     <meta name="description"
-        content="SOLVY cleaning solutions for hotels, healthcare, corporate, education, residential and distributors. Purpose-built chemistry for diverse environments.">
+        content="SOLVY cleaning solutions for hotels, healthcare, corporate offices, education, residential societies and distributors across India.">
+    <meta name="keywords"
+        content="SOLVY industries we serve, hotel cleaning chemicals, hospital cleaning chemicals, office cleaning chemicals, institutional cleaning chemicals">
+    <meta property="og:title" content="Industries We Serve | SOLVY Cleaning Chemicals">
+    <meta property="og:description"
+        content="SOLVY cleaning solutions for hotels, healthcare, corporate offices, education, residential societies and distributors across India.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/slider-1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
