--- a/about.html
+++ b/about.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About SOLVY</title>
+    <title>About SOLVY | Cleaning Chemical Brand in India</title>
     <meta name="description"
-        content="About SOLVY - trusted cleaning solutions for commercial and household use. Floor cleaners, kitchen degreasers, glass cleaners, and more across India.">
+        content="Learn about SOLVY, a specialised cleaning chemical brand serving hotels, hospitals, offices and homes across India.">
+    <meta name="keywords"
+        content="About SOLVY, cleaning chemical brand, cleaning chemical manufacturer India, hotel cleaning chemicals, hospital cleaning chemicals">
+    <meta property="og:title" content="About SOLVY | Cleaning Chemical Brand in India">
+    <meta property="og:description"
+        content="Learn about SOLVY, a specialised cleaning chemical brand serving hotels, hospitals, offices and homes across India.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/slider-1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
