--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Get in Touch | SOLVY</title>
+    <title>Contact SOLVY | Cleaning Chemical Supplier in Indore</title>
     <meta name="description"
-        content="Contact SOLVY - Indore, India. Call or WhatsApp for product inquiries, bulk orders and distribution. +91 9111912346.">
+        content="Contact SOLVY in Indore, India for cleaning chemical product inquiries, bulk orders and distribution. Call or WhatsApp on +91 9111912346.">
+    <meta name="keywords"
+        content="contact SOLVY, SOLVY phone, SOLVY email, cleaning chemical supplier Indore, bulk cleaning chemicals India">
+    <meta property="og:title" content="Contact SOLVY | Cleaning Chemical Supplier in Indore">
+    <meta property="og:description"
+        content="Contact SOLVY in Indore, India for cleaning chemical product inquiries, bulk orders and distribution. Call or WhatsApp on +91 9111912346.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/slider-1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
@@ -58,8 +65,8 @@
                                 <span class="contact-icon rounded-2 me-3"><i class="bi bi-envelope"></i></span>
                                 <div>
                                     <span class="text-muted small d-block">Email</span>
-                                    <a href="mailto:contact.solvy@gmail.com"
-                                        class="text-decoration-none">contact.solvy@gmail.com</a>
+                                    <a href="mailto:Contact.solvy@gmail.com"
+                                        class="text-decoration-none">Contact.solvy@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
