--- a/cookie.html
+++ b/cookie.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cookie Policy | SOLVY</title>
     <meta name="description"
-        content="SOLVY cookie policy describing types of cookies used and how to manage them.">
+        content="SOLVY Cookie Policy describing the types of cookies we use on this website and how you can manage your cookie preferences.">
+    <meta name="keywords"
+        content="SOLVY cookie policy, website cookies, manage cookies, cookie settings">
+    <meta property="og:title" content="Cookie Policy | SOLVY">
+    <meta property="og:description"
+        content="SOLVY Cookie Policy describing the types of cookies we use on this website and how you can manage your cookie preferences.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/hero-product.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
