--- a/distributors.html
+++ b/distributors.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Become a SOLVY Distributor | Distribution Network</title>
+    <title>Become a SOLVY Distributor | Cleaning Chemical Distribution</title>
     <meta name="description"
-        content="Join SOLVY's distribution network across India. Distributors, wholesalers and channel partners—high-demand cleaning products, attractive margins, bulk and retail options.">
+        content="Join SOLVY's cleaning chemical distribution network across India. Distributors, wholesalers and channel partners for high-demand cleaning products with attractive margins.">
+    <meta name="keywords"
+        content="SOLVY distributor, cleaning chemical distributor India, cleaning product wholesaler, SOLVY dealership, distribution opportunity">
+    <meta property="og:title" content="Become a SOLVY Distributor | Cleaning Chemical Distribution">
+    <meta property="og:description"
+        content="Join SOLVY's cleaning chemical distribution network across India. Distributors, wholesalers and channel partners for high-demand cleaning products with attractive margins.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/slider-1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
