--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:description"
         content="High-performance cleaning chemicals for hotels, hospitals, offices, distributors and homes across India.">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/slider-1.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
@@ -57,7 +58,7 @@
                 <div class="col-lg-6">
                     <!-- <span class="section-label">About us</span> -->
                     <h2 class="section-title mb-3">About SOLVY</h2>
-                    <p class="lead text-body-secondary mb-3">
+                    <p class="lead text-body-secondary mb-3 fw-semibold">
                         A specialised cleaning chemical brand focused on consistent, professional-grade hygiene for
                         critical environments.
                     </p>
@@ -212,8 +213,8 @@
                     </p>
                     <ul class="contact-list">
                         <li><a href="tel:+919111912346"><i class="bi bi-telephone me-2"></i>+91 9111912346</a></li>
-                        <li><a href="mailto:contact.solvycare@gmail.com"><i
-                                    class="bi bi-envelope me-2"></i>contact.solvycare@gmail.com</a></li>
+                        <li><a href="mailto:Contact.solvy@gmail.com"><i
+                                    class="bi bi-envelope me-2"></i>Contact.solvy@gmail.com</a></li>
                         <li><i class="bi bi-geo-alt me-2"></i>Indore, India</li>
                     </ul>
                     <div class="d-flex flex-wrap gap-2">
