--- a/privacy.html
+++ b/privacy.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Privacy Policy | SOLVY</title>
+    <title>Privacy Policy | SOLVY & Horizon Care</title>
     <meta name="description"
-        content="SOLVY Privacy Policy - how Horizon Care collects, uses, and protects your Personal Data. DPDP Act 2023, IT Act compliant.">
+        content="SOLVY Privacy Policy by Horizon Care - how we collect, use and protect your personal data in line with the DPDP Act 2023 and IT Act in India.">
+    <meta name="keywords"
+        content="SOLVY privacy policy, Horizon Care privacy, DPDP Act 2023, data protection India, personal data policy">
+    <meta property="og:title" content="Privacy Policy | SOLVY & Horizon Care">
+    <meta property="og:description"
+        content="SOLVY Privacy Policy by Horizon Care - how we collect, use and protect your personal data in line with the DPDP Act 2023 and IT Act in India.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/hero-product.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -54,7 +62,7 @@
             <p class="text-muted">If you do not agree with this Privacy Policy, please refrain from using our services.
             </p>
             <p class="text-muted">You may withdraw your consent at any time by contacting us at <a
-                    href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>, subject to legal or contractual
+                    href="mailto:Contact.solvy@gmail.com">Contact.solvy@gmail.com</a>, subject to legal or contractual
                 restrictions.</p>
 
             <h2 class="h4 mt-5">2. Collection of Your Personal Data and Other Information</h2>
@@ -168,7 +176,7 @@
                 Data; request correction of inaccurate data; request deletion of your Personal Data; withdraw consent;
                 and opt out of marketing communications.</p>
             <p class="text-muted">To exercise these rights, please contact us at <a
-                    href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a>. We may require identity
+                    href="mailto:Contact.solvy@gmail.com">Contact.solvy@gmail.com</a>. We may require identity
                 verification before processing such requests.</p>
             <p class="text-muted"><strong>Do Not Track:</strong> Our website currently does not respond to browser “Do
                 Not Track” signals.</p>
@@ -189,7 +197,7 @@
             <p class="text-muted">If you have any questions, concerns, or requests regarding this Privacy Policy or your
                 Personal Data, please contact:</p>
             <p class="text-muted mb-1"><strong>Horizon Care</strong><br>(Owner of Solvy Brand)</p>
-            <p class="text-muted mb-0">Email: <a href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a></p>
+            <p class="text-muted mb-0">Email: <a href="mailto:Contact.solvy@gmail.com">Contact.solvy@gmail.com</a></p>
         </div>
     </main>
 
