--- a/products.html
+++ b/products.html
@@ -13,6 +13,7 @@
   <meta property="og:description"
     content="Professional cleaning solutions for hotels, hospitals, offices, distributors and homes.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/images/hero-product.png">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
