--- a/products/dishwash.html
+++ b/products/dishwash.html
@@ -7,6 +7,10 @@
   <title>Dishwash | SOLVY</title>
   <meta name="description" content="Solvy Dishwash - effective dishwashing liquid for removing grease and food residues. For homes, hotels and restaurants.">
   <meta name="keywords" content="dishwash, dishwashing liquid, kitchen cleaning, SOLVY">
+  <meta property="og:title" content="Dishwash | SOLVY">
+  <meta property="og:description" content="Solvy Dishwash - effective dishwashing liquid for removing grease and food residues. For homes, hotels and restaurants.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
