--- a/products/floor-cleaner.html
+++ b/products/floor-cleaner.html
@@ -7,6 +7,10 @@
   <title>Floor Cleaner | SOLVY</title>
   <meta name="description" content="SOLVY Floor Cleaner - high-performance industrial floor cleaner for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="SOLVY floor cleaner, industrial floor cleaner, hotel floor cleaner, hospital floor cleaner">
+  <meta property="og:title" content="Floor Cleaner | SOLVY">
+  <meta property="og:description" content="SOLVY Floor Cleaner - high-performance industrial floor cleaner for hotels, hospitals, offices and homes.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
