--- a/products/garbage-bags.html
+++ b/products/garbage-bags.html
@@ -7,6 +7,10 @@
   <title>Garbage Bags | SOLVY</title>
   <meta name="description" content="SOLVY Garbage Bags - quality waste bags for commercial and residential use.">
   <meta name="keywords" content="garbage bags, waste bags, SOLVY">
+  <meta property="og:title" content="Garbage Bags | SOLVY">
+  <meta property="og:description" content="SOLVY Garbage Bags - quality waste bags for commercial and residential use.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
