--- a/products/glass-cleaner.html
+++ b/products/glass-cleaner.html
@@ -11,6 +11,11 @@
   <meta name="description"
     content="SOLVY Glass Cleaner - streak-free glass and mirror cleaner for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="glass cleaner, window cleaner, streak-free glass cleaner">
+  <meta property="og:title" content="Glass Cleaner | SOLVY">
+  <meta property="og:description"
+    content="SOLVY Glass Cleaner - streak-free glass and mirror cleaner for hotels, hospitals, offices and homes.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
