--- a/products/kitchen-cleaner.html
+++ b/products/kitchen-cleaner.html
@@ -7,6 +7,10 @@
   <title>Kitchen Cleaner | SOLVY</title>
   <meta name="description" content="SOLVY Kitchen Cleaner - heavy-duty kitchen degreaser for commercial and institutional food preparation areas.">
   <meta name="keywords" content="kitchen cleaner, commercial degreaser, hotel kitchen cleaner">
+  <meta property="og:title" content="Kitchen Cleaner | SOLVY">
+  <meta property="og:description" content="SOLVY Kitchen Cleaner - heavy-duty kitchen degreaser for commercial and institutional food preparation areas.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
