--- a/products/liquid-hand-wash.html
+++ b/products/liquid-hand-wash.html
@@ -11,6 +11,11 @@
   <meta name="description"
     content="SOLVY Liquid Hand Wash - mild, effective hand wash for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="liquid hand wash, hotel hand wash, bulk hand wash supplier">
+  <meta property="og:title" content="Liquid Hand Wash | SOLVY">
+  <meta property="og:description"
+    content="SOLVY Liquid Hand Wash - mild, effective hand wash for hotels, hospitals, offices and homes.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
