--- a/products/tissue-paper.html
+++ b/products/tissue-paper.html
@@ -7,6 +7,10 @@
   <title>Tissue Paper | SOLVY</title>
   <meta name="description" content="SOLVY Tissue Paper - quality tissue for washrooms and facilities.">
   <meta name="keywords" content="tissue paper, SOLVY, washroom tissue">
+  <meta property="og:title" content="Tissue Paper | SOLVY">
+  <meta property="og:description" content="SOLVY Tissue Paper - quality tissue for washrooms and facilities.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
