--- a/products/toilet-bowl-cleaner.html
+++ b/products/toilet-bowl-cleaner.html
@@ -11,6 +11,11 @@
   <meta name="description"
     content="SOLVY Toilet Bowl Cleaner - thick washroom cleaner for tough stains and hygienic toilets in hotels, hospitals and offices.">
   <meta name="keywords" content="toilet bowl cleaner, washroom cleaner, urinal cleaner">
+  <meta property="og:title" content="Toilet Bowl Cleaner | SOLVY">
+  <meta property="og:description"
+    content="SOLVY Toilet Bowl Cleaner - thick washroom cleaner for tough stains and hygienic toilets in hotels, hospitals and offices.">
+  <meta property="og:type" content="product">
+  <meta property="og:image" content="../assets/images/hero-product.png">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
