--- a/terms.html
+++ b/terms.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Terms &amp; Conditions | SOLVY</title>
     <meta name="description"
-        content="Terms and Conditions for Solvy website, products and services. Horizon Care - cleaning and hygiene products.">
+        content="Terms and Conditions for SOLVY website, cleaning products and services operated by Horizon Care in India.">
+    <meta name="keywords"
+        content="SOLVY terms and conditions, Horizon Care terms, cleaning product terms of use, website terms India">
+    <meta property="og:title" content="Terms &amp; Conditions | SOLVY">
+    <meta property="og:description"
+        content="Terms and Conditions for SOLVY website, cleaning products and services operated by Horizon Care in India.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/images/hero-product.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -172,7 +180,7 @@
             <h2 class="h4 mt-5">19. Contact Us</h2>
             <p class="text-muted">For questions, complaints, or legal inquiries, please contact:</p>
             <p class="text-muted mb-1"><strong>Horizon Care</strong><br>(Owner of Solvy Brand)</p>
-            <p class="text-muted mb-0">Email: <a href="mailto:contact.solvy@gmail.com">contact.solvy@gmail.com</a></p>
+            <p class="text-muted mb-0">Email: <a href="mailto:Contact.solvy@gmail.com">Contact.solvy@gmail.com</a></p>
         </div>
     </main>
 
