--- a/products/dishwash.html
+++ b/products/dishwash.html
@@ -7,6 +7,8 @@
   <title>Dishwash | SOLVY</title>
   <meta name="description" content="Solvy Dishwash - effective dishwashing liquid for removing grease and food residues. For homes, hotels and restaurants.">
   <meta name="keywords" content="dishwash, dishwashing liquid, kitchen cleaning, SOLVY">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Dishwash | SOLVY">
   <meta property="og:description" content="Solvy Dishwash - effective dishwashing liquid for removing grease and food residues. For homes, hotels and restaurants.">
   <meta property="og:type" content="product">
