--- a/products/floor-cleaner.html
+++ b/products/floor-cleaner.html
@@ -7,6 +7,8 @@
   <title>Floor Cleaner | SOLVY</title>
   <meta name="description" content="SOLVY Floor Cleaner - high-performance industrial floor cleaner for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="SOLVY floor cleaner, industrial floor cleaner, hotel floor cleaner, hospital floor cleaner">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Floor Cleaner | SOLVY">
   <meta property="og:description" content="SOLVY Floor Cleaner - high-performance industrial floor cleaner for hotels, hospitals, offices and homes.">
   <meta property="og:type" content="product">
