--- a/products/garbage-bags.html
+++ b/products/garbage-bags.html
@@ -7,6 +7,8 @@
   <title>Garbage Bags | SOLVY</title>
   <meta name="description" content="SOLVY Garbage Bags - quality waste bags for commercial and residential use.">
   <meta name="keywords" content="garbage bags, waste bags, SOLVY">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Garbage Bags | SOLVY">
   <meta property="og:description" content="SOLVY Garbage Bags - quality waste bags for commercial and residential use.">
   <meta property="og:type" content="product">
