--- a/products/glass-cleaner.html
+++ b/products/glass-cleaner.html
@@ -11,6 +11,8 @@
   <meta name="description"
     content="SOLVY Glass Cleaner - streak-free glass and mirror cleaner for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="glass cleaner, window cleaner, streak-free glass cleaner">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Glass Cleaner | SOLVY">
   <meta property="og:description"
     content="SOLVY Glass Cleaner - streak-free glass and mirror cleaner for hotels, hospitals, offices and homes.">
