--- a/products/kitchen-cleaner.html
+++ b/products/kitchen-cleaner.html
@@ -7,6 +7,8 @@
   <title>Kitchen Cleaner | SOLVY</title>
   <meta name="description" content="SOLVY Kitchen Cleaner - heavy-duty kitchen degreaser for commercial and institutional food preparation areas.">
   <meta name="keywords" content="kitchen cleaner, commercial degreaser, hotel kitchen cleaner">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Kitchen Cleaner | SOLVY">
   <meta property="og:description" content="SOLVY Kitchen Cleaner - heavy-duty kitchen degreaser for commercial and institutional food preparation areas.">
   <meta property="og:type" content="product">
