--- a/products/toilet-bowl-cleaner.html
+++ b/products/toilet-bowl-cleaner.html
@@ -11,6 +11,8 @@
   <meta name="description"
     content="SOLVY Toilet Bowl Cleaner - thick washroom cleaner for tough stains and hygienic toilets in hotels, hospitals and offices.">
   <meta name="keywords" content="toilet bowl cleaner, washroom cleaner, urinal cleaner">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Toilet Bowl Cleaner | SOLVY">
   <meta property="og:description"
     content="SOLVY Toilet Bowl Cleaner - thick washroom cleaner for tough stains and hygienic toilets in hotels, hospitals and offices.">
