--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo_solvy-removebg-preview.png">
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
