--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
         rel="stylesheet">
 
+    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo_solvy-removebg-preview.png">
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
