--- a/products/liquid-hand-wash.html
+++ b/products/liquid-hand-wash.html
@@ -11,6 +11,8 @@
   <meta name="description"
     content="SOLVY Liquid Hand Wash - mild, effective hand wash for hotels, hospitals, offices and homes.">
   <meta name="keywords" content="liquid hand wash, hotel hand wash, bulk hand wash supplier">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Liquid Hand Wash | SOLVY">
   <meta property="og:description"
     content="SOLVY Liquid Hand Wash - mild, effective hand wash for hotels, hospitals, offices and homes.">
