--- a/products/tissue-paper.html
+++ b/products/tissue-paper.html
@@ -7,6 +7,8 @@
   <title>Tissue Paper | SOLVY</title>
   <meta name="description" content="SOLVY Tissue Paper - quality tissue for washrooms and facilities.">
   <meta name="keywords" content="tissue paper, SOLVY, washroom tissue">
+  <link rel="icon" type="image/svg+xml" href="../assets/images/logo.svg">
+  <link rel="shortcut icon" type="image/png" href="../assets/images/logo_solvy-removebg-preview.png">
   <meta property="og:title" content="Tissue Paper | SOLVY">
   <meta property="og:description" content="SOLVY Tissue Paper - quality tissue for washrooms and facilities.">
   <meta property="og:type" content="product">
