--- a/products.html
+++ b/products.html
@@ -22,6 +22,82 @@
   <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
   <link rel="shortcut icon" type="image/png" href="assets/images/logo_solvy-removebg-preview.png">
   <link rel="stylesheet" href="assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "name": "SOLVY Cleaning Chemical Product Range",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Floor cleaner",
+          "url": "https://solvycare.com/products/floor-cleaner.html",
+          "image": "https://solvycare.com/assets/images/Solvy Floor cleaner.png",
+          "description": "High-performance deodorizing floor cleaner for daily maintenance in hotels, hospitals, offices and homes."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Kitchen Cleaner",
+          "url": "https://solvycare.com/products/kitchen-cleaner.html",
+          "image": "https://solvycare.com/assets/images/Solvy Kitchen Cleaner.png",
+          "description": "Heavy-duty kitchen degreaser for food preparation areas and commercial kitchens."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Glass Cleaner",
+          "url": "https://solvycare.com/products/glass-cleaner.html",
+          "image": "https://solvycare.com/assets/images/Solvy Glass Cleaner.png",
+          "description": "Streak-free glass and mirror cleaner for clear, spot-free surfaces."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 4,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Toilet Cleaner",
+          "url": "https://solvycare.com/products/toilet-bowl-cleaner.html",
+          "image": "https://solvycare.com/assets/images/Solvy Toilet Cleaner.png",
+          "description": "Thick toilet bowl cleaner for tough stains and hygienic washrooms."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 5,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Handwash",
+          "url": "https://solvycare.com/products/liquid-hand-wash.html",
+          "image": "https://solvycare.com/assets/images/Solvy Handwash.png",
+          "description": "Mild, effective liquid hand wash for frequent use in commercial and home washrooms."
+        }
+      },
+      {
+        "@type": "ListItem",
+        "position": 6,
+        "item": {
+          "@type": "Product",
+          "name": "Solvy Dishwash",
+          "url": "https://solvycare.com/products/dishwash.html",
+          "image": "https://solvycare.com/assets/images/Solvy Dishwash.png",
+          "description": "Effective dishwash liquid for removing grease and food residues."
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 
 <body data-page="products">
