--- a/products/floor-cleaner.html
+++ b/products/floor-cleaner.html
@@ -17,6 +17,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Floor cleaner",
+    "image": "https://solvycare.com/assets/images/Solvy Floor cleaner.png",
+    "description": "SOLVY Floor Cleaner is a professional-grade formulation designed for daily cleaning of vitrified tiles, marble, granite and other hard floor surfaces.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Surface Care",
+    "sku": "1",
+    "url": "https://solvycare.com/products/floor-cleaner.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="floor-cleaner">
