--- a/products/garbage-bags.html
+++ b/products/garbage-bags.html
@@ -17,6 +17,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "SOLVY Garbage Bags",
+    "image": "https://solvycare.com/assets/images/garbage-bags.png",
+    "description": "SOLVY Garbage Bags - quality waste bags for commercial and residential use.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Cleaning Accessories",
+    "url": "https://solvycare.com/products/garbage-bags.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="garbage-bags">
