--- a/products/glass-cleaner.html
+++ b/products/glass-cleaner.html
@@ -28,6 +28,23 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Glass Cleaner",
+    "image": "https://solvycare.com/assets/images/Solvy Glass Cleaner.png",
+    "description": "SOLVY Glass Cleaner delivers crystal-clear, streak-free cleaning for glass, mirrors, windows and glossy surfaces.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Glass & Surface Care",
+    "sku": "3",
+    "url": "https://solvycare.com/products/glass-cleaner.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="glass-cleaner">
