--- a/products/kitchen-cleaner.html
+++ b/products/kitchen-cleaner.html
@@ -17,6 +17,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Kitchen Cleaner",
+    "image": "https://solvycare.com/assets/images/Solvy Kitchen Cleaner.png",
+    "description": "SOLVY Kitchen Cleaner is a powerful degreasing formulation for cutting through oil, grease and food deposits on kitchen surfaces.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Kitchen Hygiene",
+    "sku": "2",
+    "url": "https://solvycare.com/products/kitchen-cleaner.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="kitchen-cleaner">
