--- a/products/liquid-hand-wash.html
+++ b/products/liquid-hand-wash.html
@@ -28,6 +28,23 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Handwash",
+    "image": "https://solvycare.com/assets/images/Solvy Handwash.png",
+    "description": "SOLVY Liquid Hand Wash is a skin-friendly hand washing formulation suitable for hotels, hospitals, offices, institutions and homes.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Personal Hygiene",
+    "sku": "5",
+    "url": "https://solvycare.com/products/liquid-hand-wash.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="liquid-hand-wash">
