--- a/products/toilet-bowl-cleaner.html
+++ b/products/toilet-bowl-cleaner.html
@@ -28,6 +28,23 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Toilet Cleaner",
+    "image": "https://solvycare.com/assets/images/Solvy Toilet Cleaner.png",
+    "description": "SOLVY Toilet Bowl Cleaner is a thick, powerful cleaner formulated to remove hard water stains, scale and deposits from toilet bowls and urinals.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Washroom Hygiene",
+    "sku": "4",
+    "url": "https://solvycare.com/products/toilet-bowl-cleaner.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="toilet-bowl-cleaner">
