--- a/products/dishwash.html
+++ b/products/dishwash.html
@@ -17,6 +17,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/style.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Solvy Dishwash",
+    "image": "https://solvycare.com/assets/images/Solvy Dishwash.png",
+    "description": "Solvy Dishwash is formulated to cut through tough grease and leave utensils sparkling clean.",
+    "brand": {
+      "@type": "Brand",
+      "name": "SOLVY"
+    },
+    "category": "Kitchen Hygiene",
+    "sku": "8",
+    "url": "https://solvycare.com/products/dishwash.html"
+  }
+  </script>
 </head>
 
 <body data-page="product-detail" data-slug="dishwash">
