--- a/index.html
+++ b/index.html
@@ -24,6 +24,40 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/logo_solvy-removebg-preview.png">
 
     <link rel="stylesheet" href="assets/css/style.css">
+
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "Organization",
+                    "@id": "https://solvycare.com/#organization",
+                    "name": "SOLVY",
+                    "description": "Professional cleaning chemical manufacturer and supplier in India, serving hotels, hospitals, offices, distributors and homes.",
+                    "telephone": "+91 9111912346",
+                    "email": "Contact.solvy@gmail.com",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressLocality": "Indore",
+                        "addressRegion": "Madhya Pradesh",
+                        "addressCountry": "IN"
+                    },
+                    "logo": "https://solvycare.com/assets/images/logo.svg",
+                    "sameAs": [
+                        "https://www.instagram.com/solvycare_?igsh=MmRsZjl6eXdudG5p",
+                        "https://www.facebook.com/solvycare"
+                    ]
+                },
+                {
+                    "@type": "WebSite",
+                    "@id": "https://solvycare.com/#website",
+                    "name": "SOLVY",
+                    "url": "https://solvycare.com/",
+                    "publisher": { "@id": "https://solvycare.com/#organization" }
+                }
+            ]
+        }
+        </script>
 </head>
 
 <body data-page="home">
